# vhir

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
adapters/ezyvet/: Dockerfile  pyproject.toml
adapters/ezyvet/tests/: conftest.py  test_client.py  test_mappings_animal.py  test_mappings_appointment.py  test_mappings_encounter.py  test_mappings_immunization.py  test_mappings_medication.py  test_mappings_observation.py  test_mappings_owner.py  test_vhir_client.py  test_webhook.py
adapters/ezyvet/vhir_adapter_ezyvet/: __init__.py  app.py  client.py  config.py
adapters/ezyvet/vhir_adapter_ezyvet/mappings/: __init__.py  animal.py  appointment.py  encounter.py  immunization.py  medication.py  observation.py  owner.py
adapters/ezyvet/vhir_adapter_ezyvet/sync/: __init__.py  daemon.py  vhir_client.py  webhook.py
docs/: technical-reference.html
docs/walkthroughs/: companion-visit.sh  herd-treatment.sh  insurance-claim.sh  lost-pet.sh
scripts/: export_openapi.py
sdk/python/: pyproject.toml
sdk/python/examples/: companion_visit.py  herd_treatment.py  insurance_claim.py  lost_pet.py
sdk/python/tests/: conftest.py  test_client.py
sdk/python/vhir_sdk/: __init__.py  client.py  exceptions.py
sdk/python/vhir_sdk/models/: __init__.py  resources.py
server/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
server/tests/: conftest.py  test_animal.py  test_m0_crud.py  test_m1_device.py  test_m1_group.py  test_m1_herd_treatment.py  test_m1_immunization.py  test_m1_pharmacy.py  test_m2_insurance.py  test_workflow.py
server/vhir_server/: config.py  main.py
server/vhir_server/api/: animal.py  base.py  m1_resources.py  resources.py  system.py
server/vhir_server/auth/: smart.py
server/vhir_server/core/: models.py
server/vhir_server/registry/: microchip.py
server/vhir_server/search/: engine.py
server/vhir_server/storage/: database.py  repository.py  tables.py
server/vhir_server/storage/migrations/: env.py
spec/: openapi.yaml
spec/schemas/: animal.json  appointment.json  condition.json  device.json  device_metric.json  encounter.json  group.json  immunization.json  insurance_claim.json  location.json  medication_administration.json  medication_dispense.json  medication_request.json  observation.json  organization.json  owner.json  practitioner.json  practitioner_role.json  procedure.json  schedule.json  slot.json
spec/terminology/: README.md  bindings.json
spec/valuesets/: breeds.json  identifier_types.json  species.json  vaccine_codes.json
