[project]
name = "vhir-server"
version = "0.1.0"
description = "VHIR reference server — FastAPI + Postgres"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "python-ulid>=3.0",
    "ulid-py>=1.1",
    "authlib>=1.3",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.18",
    "jsonschema>=4.23",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "--cov=vhir_server --cov-report=term-missing --cov-fail-under=80 --cov-config=pyproject.toml"

[tool.coverage.run]
omit = ["vhir_server/storage/migrations/*"]

[tool.hatch.build.targets.wheel]
packages = ["vhir_server"]
