[project]
name = "vhir-sdk"
version = "0.1.0"
description = "VHIR Python SDK — async client for the Veterinary Health Interoperability Resources API"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
keywords = ["vhir", "veterinary", "fhir", "health", "interoperability"]
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vhir_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "--cov=vhir_sdk --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["tests/*"]
